# rag-telegram-agent

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
app/: RAG_agent.py  telegram_bot.py
prompts/: SYSTEM_PROMPT_191025.j2
